--- a/index.html
+++ b/index.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lux Ventus</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- header  -->
 
     <header>
-        <div class="header container">
-            <div class="header-logo">
-                <a href="./index.html">
-                    <img src="./assets/logo.png" alt="">
-                </a>
-            </div>
-
-            <div class="header-nav">
-                <a href="#">Fashion</a>
-                <a href="#">Lifestyle</a>
-                <a href="#">Spiritual</a>
-                <a href="#">Mental Health</a>
-                <a href="#">Contact Us</a>
-
-                    <img src="./assets/search-icon.png" alt="">
-            </div>
+      <div class="header container">
+        <div class="header-logo">
+          <a href="./index.html">
+            <img src="./assets/logo.png" alt="" />
+          </a>
         </div>
+
+        <div class="header-nav">
+          <a href="#">Fashion</a>
+          <a href="#">Lifestyle</a>
+          <a href="#">Spiritual</a>
+          <a href="#">Mental Health</a>
+          <a href="#">Contact Us</a>
+
+          <img src="./assets/search-icon.png" alt="" />
+        </div>
+      </div>
     </header>
 
-    
-</body>
+    <!-- first-section -->
+
+    <section>
+      <div class="first-section container">
+        <div class="first-section-texts">
+          <p>LUX VENTUS MAGAZINE</p>
+          <h1>We Are the <span>Ventus Fashion</span></h1>
+          <h3>
+            We like to gossip about everything, but we will never forget the
+            daily fashion dose.
+          </h3>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
