--- a/index.html
+++ b/index.html
@@ -48,5 +48,72 @@
         </div>
       </div>
     </section>
+
+
+
+    <!-- topics  -->
+
+    <section>
+        <div class="topics container">
+            <div class="topics-title">
+                <h1>Topics</h1>
+            </div>
+
+            <div class="topics-cards">
+                <div class="topics-card">
+                    <div class="topics-card-photo">
+                        <img src="./assets/chakra (1).png" alt="">
+                    </div>
+                    <h3>Lingerie</h3>
+                    <a href="#">View More</a>
+                </div>
+                    <div class="topics-card">
+                    <div class="topics-card-photo">
+                        <img src="./assets/lingerie-underwear (2).png" alt="">
+                    </div>
+                    <h3>Lingerie</h3>
+                    <a href="#">View More</a>
+                </div>
+                    <div class="topics-card">
+                    <div class="topics-card-photo">
+                        <img src="./assets/chakra (1).png" alt="">
+                    </div>
+                    <h3>Lingerie</h3>
+                    <a href="#">View More</a>
+                </div>
+                    <div class="topics-card">
+                    <div class="topics-card-photo">
+                        <img src="./assets/chakra (1).png" alt="">
+                    </div>
+                    <h3>Lingerie</h3>
+                    <a href="#">View More</a>
+                </div>
+                    <div class="topics-card">
+                    <div class="topics-card-photo">
+                        <img src="./assets/chakra (1).png" alt="">
+                    </div>
+                    <h3>Lingerie</h3>
+                    <a href="#">View More</a>
+                </div>
+                    <div class="topics-card">
+                    <div class="topics-card-photo">
+                        <img src="./assets/chakra (1).png" alt="">
+                    </div>
+                    <h3>Lingerie</h3>
+                    <a href="#">View More</a>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
+
+    <!-- line -->
+
+    <div class="line container">
+        <hr>
+    </div>
+
+
   </body>
 </html>
