--- a/index.html
+++ b/index.html
@@ -115,5 +115,20 @@
     </div>
 
 
+    <!-- fashion  -->
+
+    <section>
+        <div class="fashion container">
+            <div class="fashion-first">
+                <img src="./assets/fashin-bg.png" alt="">
+                <a href="#">Fashion</a>
+            </div>
+
+            <div class="first-second">
+
+            </div>
+        </div>
+    </section>
+
   </body>
 </html>
