Project complte. All sections are finalized

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lux Ventus</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <link
@@ -262,7 +263,7 @@
   <article class="blog-card-horizontal">
     <div class="blog-image-wrapper-horizontal">
       <img src="./assets/ensembles.jpg" alt="Fashion" class="blog-image-horizontal">
-      <span class="blog-tag-horizontal">FASHION</span>
+      <span class="blog-tag-horizontal">ENSEMBLES</span>
     </div>
 
     <div class="blog-content-wrapper-horizontal">
@@ -294,7 +295,7 @@
   <article class="blog-card-horizontal">
     <div class="blog-image-wrapper-horizontal">
       <img src="./assets/mental health.jpg" alt="Fashion" class="blog-image-horizontal">
-      <span class="blog-tag-horizontal">FASHION</span>
+      <span class="blog-tag-horizontal">MENTAL HEALTH</span>
     </div>
 
     <div class="blog-content-wrapper-horizontal">
@@ -324,6 +325,42 @@
   </article>
 
 </section>
+
+<!-- Footer -->
+
+<footer>
+  <div class="footer-container">
+    <div class="footer-header">
+      <div class="footer-logo">
+        <img src="./assets/logo.png" alt="">
+      </div>
+      <div class="social-links-wrapper">
+        <span class="hangout-text">Let's Hang Out</span>
+        <div class="social-icons">
+          <a href="#" class="social-icon">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="#" class="social-icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-divider"></div>
+    <div class="footer-copyright">
+      <p>© 2023 – Lux Ventus by Zine.E.Falouti</p>
+    </div>
+  </div>
+</footer>
 
   </body>
 </html>
